--- a/transferit/package.json
+++ b/transferit/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nazalnihad.github.io/TransferIT",
+  "homepage": "https://nazalnihad.github.io/TransferIt",
   "name": "transferit",
   "version": "0.1.0",
   "private": true,
